--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.7.12",
     "tailwind-scrollbar-hide": "^1.1.7",
     "yup": "^1.2.0"
   },
@@ -34,6 +36,7 @@
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.1.10",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
