--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "emoji-picker-react": "^4.4.9",
     "formik": "^2.4.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
