--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.12",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "timeago.js": "^4.0.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
