--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.1",
     "sweetalert2": "^11.7.12",
     "tailwind-scrollbar-hide": "^1.1.7",
     "timeago.js": "^4.0.2",
@@ -34,6 +35,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-modal": "^3.16.0",
+    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
