--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@heroicons/react": "^2.0.18",
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@zegocloud/zego-uikit-prebuilt": "^1.8.9",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.2",
     "emoji-picker-react": "^4.4.9",
     "formik": "^2.4.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.1",
@@ -26,12 +29,13 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.1",
-    "sweetalert2": "^11.7.12",
+    "sweetalert2": "^11.6.13",
     "tailwind-scrollbar-hide": "^1.1.7",
     "timeago.js": "^4.0.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.4.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-modal": "^3.16.0",
@@ -47,6 +51,7 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-remove-console": "^2.1.1"
   }
 }
